--- a/src/components/MyRecipe/MyRecipeCSS.module.css
+++ b/src/components/MyRecipe/MyRecipeCSS.module.css
@@ -63,6 +63,7 @@
   /* width: calc(100% - 40px); */
   /* min-width: 760px; */
   width: calc(100% - 40px);
+  /* width: calc(100% - 100px); */
 }
 
 .eachRow:last-child { justify-content: center; }
@@ -123,60 +124,98 @@
 }
 
 .titleAndTextFieldContainer {
-  width: 100%
+  /* width: calc(100% - 113px) !important */
+  display: flex;
+  position: relative;
+  width: 100% !important;
+  /* max-width: calc(100% - 123px) !important; */
 }
 
 .titleAndTextFieldContainer ::placeholder {
   color: rgba(245, 245, 220, 0.3) !important
 }
 
+.select { /* ...noSelect; */
+  display: flex;
+  position: relative;
+  /* width: 100% !important; */
+  background: rgba(128, 128, 128, 0.2);
+  border-radius: 4px;
+  /* flex-grow: 0px !important; */
+  /* white-space: break-spaces !important; */
+  /* max-width: calc(100% - 0px) !important; */
+  /* max-width: calc(100% - 113px) !important; */
+  /* width: 100% !important; */
+  /* max-width: calc(100% - 10px) !important; */
+  /* max-width: 100% !important; */
+  /* max-width: 100% !important; */
+  /* max-width: 200px !important; */
+  color: rgba(245, 245, 220, 0.85) !important /* WHEN SELECTED */
+}
+
+.selectInput {
+  white-space: break-spaces !important;
+  /* white-space: normal !important; */
+}
+
+
+.select ::placeholder {
+  color: rgba(245, 245, 220, 0.3) !important; /* PLACEHOLDER */
+}
+
+.input { /* ...noSelect; */
+  display: flex;
+  position: relative;
+  background: rgba(128, 128, 128, 0.2);
+  border-radius: 4px;
+  width: 100% !important;
+  /* color: rgba(245, 245, 220, 0.85) !important */ /* WHEN SELECTED */
+}
+
+.input ::placeholder {
+  color: rgba(245, 245, 220, 0.3) !important; /* PLACEHOLDER */
+}
+
+.inputStyle {
+  color: rgba(245, 245, 220, 0.85) !important; /* HIDDEN, ONLY LABEL SHOWN */
+  caret-color: rgba(0, 0, 0, 0.87) !important;
+}
+
 .inputShownTitle {
   display: flex !important;
   white-space: pre !important; /* SINGLE LINE */
-  /* width: calc(68vw - 28px) !important; */
   margin-left: 14px !important;
-  padding: 16.5px 0px 16.5px 0px !important;
+  padding: 17px 0px 16.5px 0px !important;
   position: absolute !important;
   width: calc(100% - 113px - 28px);
-  /* color: orange !important */
+  /* color: rgba(245, 245, 220, 0.85) !important; */ /* WHEN WRITING */
 }
 
 .inputHiddenTitle { /* ...noSelect; */
   display: flex !important;
   position: relative !important;
-  background: rgba(128, 128, 128, 0.2);
+  background: rgba(128, 128, 128, 0.2); /* INPUT BACKGROUND */
   border-radius: 4px;
 }
 
-.inputStyle {
-  color: rgba(245, 245, 220, 0.85) !important
+.inputShownTitle mark {
+  color: rgba(245, 245, 220, 0.85) !important; /* MARKDOWN COLOR */
+  background: rgba(0, 255, 0, 0.4) !important; /* MARKDOWN BACKGROUND */
 }
 
 .inputHiddenTitle ::placeholder {
-  color: rgba(245, 245, 220, 0.3) !important
-  /* color: transparent !important; */
+  color: rgba(245, 245, 220, 0.3) !important /* PLACEHOLDER */
 }
 
-/* margin-left: 20px;
-margin-right: 20px;
-min-width: 760px;
-width: calc(100% - 40px); */
-
-/* .inputShownSummary {
-  display: flex !important;
-  margin-left: 14px !important;
-  padding: 16.5px 0px 16.5px 0px !important;
-  position: absolute !important;
-  width: calc(100% - 113px - 14px);
+.inputImage {
+  color: rgba(245, 245, 220, 0.85) !important; /* HIDDEN, ONLY LABEL SHOWN */
+  caret-color: rgba(0, 0, 0, 0.87) !important;
 }
 
-.inputHiddenSummary {
-  display: flex !important;
-  position: relative !important;
-  width: 100%;
-  background: rgba(128, 128, 128, 0.2);
-  border-radius: 4px;
-} */
+.inputHealth {
+  color: rgba(245, 245, 220, 0.85) !important; /* HIDDEN, ONLY LABEL SHOWN */
+  caret-color: rgba(0, 0, 0, 0.87) !important;
+}
 
 .inputShownSummary {
   display: flex !important;
@@ -186,15 +225,27 @@ width: calc(100% - 40px); */
   margin-left: 14px !important;
   padding: 16.5px 0px 16.5px 0px !important;
   position: absolute !important;
-  width: calc(100% - 113px - 28px);
+  /* width: calc(100% - 113px - 28px); */
+  width: calc(100% - 28px);
+  /* color: rgba(245, 245, 220, 0.85) !important; */ /* WHEN WRITING */
 }
 
 .inputHiddenSummary {
   display: flex;
   position: relative;
   width: 100% !important;
-  background: rgba(128, 128, 128, 0.2);
+  background: rgba(128, 128, 128, 0.2); /* INPUT BACKGROUND */
   border-radius: 4px;
+}
+
+.inputShownSummary mark {
+  color: rgba(245, 245, 220, 0.85) !important; /* MARKDOWN COLOR */
+  background: rgba(0, 255, 0, 0.4) !important; /* MARKDOWN BACKGROUND */
+}
+
+.inputSummary {
+  color: rgba(245, 245, 220, 0.85) !important; /* HIDDEN, ONLY LABEL SHOWN */
+  caret-color: rgba(0, 0, 0, 0.87) !important;
 }
 
 .instructionsContainer {
@@ -211,12 +262,12 @@ width: calc(100% - 40px); */
   margin-left: 14px !important;
   padding: 16.5px 0px 16.5px 0px !important;
   position: absolute !important;
-  color: transparent !important;
+  /* color: transparent !important; */
 }
 
 .inputHiddenInstructions {
   /* background: lightgreen; */ /* DEV */
-  background: rgba(128, 128, 128, 0.2);
+  background: rgba(128, 128, 128, 0.2); /* INPUT BACKGROUND */
   border-radius: 4px;
   display: flex;
   position: relative;
@@ -227,30 +278,19 @@ width: calc(100% - 40px); */
   color: rgba(245, 245, 220, 0.3) !important
 }
 
+.inputShownInstructions mark {
+  color: rgba(245, 245, 220, 0.85) !important; /* MARKDOWN COLOR */
+  background: rgba(0, 255, 0, 0.4) !important; /* MARKDOWN BACKGROUND */
+}
+
+.inputInstructions {
+  color: rgba(245, 245, 220, 0.85) !important; /* HIDDEN, ONLY LABEL SHOWN */
+  caret-color: rgba(0, 0, 0, 0.87) !important;
+}
+
 .inputStep {
   width: 48vw;
   /* background: lightblue */ /* DEV */
-}
-
-.input {
-  /* ...noSelect; */
-  display: flex;
-  position: relative;
-  background: rgba(128, 128, 128, 0.2);
-  border-radius: 4px;
-  /* width: 68vw; */
-  width: 100% !important;
-  color: orange !important
-  /* input: {
-    color: rgba(0; 0; 0; 0.87) !important;
-    caretColor: rgba(0; 0; 0; 0.87) !important;
-    ::selection: {
-    }
-  } */
-}
-
-.input ::placeholder {
-  color: rgba(245, 245, 220, 0.3) !important;
 }
 
 .label {
