--- a/src/App.module.css
+++ b/src/App.module.css
@@ -13,6 +13,8 @@
   width: 100vw;
   height: 100vh;
   background-image: url('./images/bgImage.webp');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .wallpaperNav {
@@ -20,7 +22,9 @@
   position: fixed;
   z-index: 2 !important;
   width: 100vw !important;
-  height: 100px !important;
+  height: 100vh !important;
   background-image: url('./images/bgImage.webp');
-  clip-path: inset(0px 0px 0px);
+  background-size: cover;
+  background-repeat: no-repeat;
+  clip-path: polygon(0% 0, 100% 0%, 100% 100px, 0 100px); /* CROP THE BAVBAR IMAGE */
 }
