--- a/src/components/Paginate/PaginateCSS.module.css
+++ b/src/components/Paginate/PaginateCSS.module.css
@@ -3,6 +3,7 @@
   z-index: 1;
   justify-content: center;
   padding: 8px 0px;
+
 }
 
 #eachButton {
@@ -14,5 +15,5 @@
   height: 21px !important;
   border-radius: 0px;
   border: 1px solid black;
-  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+  /* box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37); */
 }
