--- a/src/components/About/AboutCSS.module.css
+++ b/src/components/About/AboutCSS.module.css
@@ -47,7 +47,8 @@
   font-weight: 400;
   text-underline-position: under;
   text-align: center;
-  margin: 15px 0px;
+  margin: 15px 0px 25px 0px;
+  /* margin: 15px 0px; */
 }
 
 .button {
