--- a/src/components/Paginate/PaginateCSS.module.css
+++ b/src/components/Paginate/PaginateCSS.module.css
@@ -3,7 +3,7 @@
   z-index: 1;
   justify-content: center;
   padding: 8px 0px;
-
+  /* margin-left: 50px; */ /* COMPENSATION OF PAGE COUNTER */
 }
 
 #eachButton {
@@ -15,5 +15,16 @@
   height: 21px !important;
   border-radius: 0px;
   border: 1px solid black;
-  /* box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37); */
+  padding-top: 7px !important;
+  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+}
+
+.counter {
+  display: flex;
+  width: 100px; /* COMPENSATED UPPER TO CENTER */
+  position: relative;
+  color: beige;
+  /* background: yellow; */ /* DEV */
+  justify-content: center;
+  font-weight: 500;
 }
