--- a/src/components/Detail/DetailCSS.module.css
+++ b/src/components/Detail/DetailCSS.module.css
@@ -1,10 +1,16 @@
 .container {
-  /* background: darkolivegreen; */ /* DEV */
+  background: darkolivegreen; /* DEV */
   display: flex;
   position: relative;
+  /* position: absolute; */
   justify-content: center;
   margin-top: 100px;
   margin-left: 16px;
+  margin-right: 16px;
+  /* width: 100%; */
+  /* width: 100vw; */
+  /* min-width: calc(100% - 132px); */
+  /* width: calc(100vw - 32px); */
   z-index: 1;
 
 }
