--- a/src/components/NavBar/NavBarCSS.module.css
+++ b/src/components/NavBar/NavBarCSS.module.css
@@ -9,11 +9,12 @@
   background-size: 100vw; */
   /* z-index: 2000; */
   z-index: 3;
+  width: 100%;
   /* overflow: hidden !important; */
   /* border: 10px solid red; */
+  flex-direction: row;
+  height: 100px;
 }
-
-
 
 .logoAndMenuContainer {
   /* background: orange; */ /* DEV */
@@ -21,6 +22,8 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  /* width: 200px !important; */
+  height: 100px;
 }
 
 .logoTextContainer {
@@ -45,7 +48,7 @@
   /* min-width: 570px; */
   min-width: 457px;
   /* width: 95vw; */
-  width: 100%;
+  /* width: 100%; */
   height: 100px;
   align-items: center;
   /* margin-right: 132.5px; */ /*  132.5 ===  "8" 64 8 36.5 16 */
@@ -217,8 +220,10 @@
 }
 
 .menuButton {
-  display: flex;
-  position: relative;
+  display: none !important;
+  /* display: flex; */
+  position: relative !important;
+  /* position: absolute !important; */
   /* :hover: { background: #e8e8e8 }; */
   /* margin-right: 18px !important; */
   color: black !important;
@@ -230,6 +235,33 @@
   font-family: Arial;
   font-weight: 400;
   font-size: 13.33px;
+  margin-right: 16px !important;
 }
 
 .menuButton:hover { background: #e8e8e8 !important }
+
+@media screen and (max-width: 800px) { /* LESS THAN 800px */
+  .background {
+    flex-direction: column;
+  }
+  .selectsAndButtons { 
+    display: none;
+    width: 100%;
+    margin-right: unset;
+  }
+  .menuButton { display: flex !important }
+  .logoAndMenuContainer { width: 100% !important }
+}
+
+@media screen and (min-width: 801px) { /* MORE THAN 800px */
+  .background {
+    height: 100px !important;
+    flex-direction: row;
+    display: flex !important;
+  }
+  .selectsAndButtons { 
+    display: flex !important;
+    width: 100%;
+    margin-right: 132.5px !important; /* 132.5 ===  "8" 64 8 36.5 16 */
+  }
+}
