--- a/src/components/GoogleAuth/GoogleAuthCSS.module.css
+++ b/src/components/GoogleAuth/GoogleAuthCSS.module.css
@@ -79,3 +79,9 @@
     margin-right: 87px;
   }
 }
+
+@media screen and (min-width: 801px) { /* MORE THAN 800px */
+  .background {
+    margin-right: 16px !important;
+  }
+}
