--- a/src/components/Paginate/PaginateCSS.module.css
+++ b/src/components/Paginate/PaginateCSS.module.css
@@ -16,7 +16,8 @@
   display: flex;
   padding-top: 8.49px !important;
   color: black;
-  min-width: 30px !important;
+  min-width: 0px !important;
+  min-height: 0px !important;
   width: 30px !important;
   height: 21px !important;
   border-radius: 0px;
@@ -24,6 +25,7 @@
   /* padding-top: 7px !important; */
   /* padding: 0px !important; */
   padding: 0px !important;
+  /* margin: 0px !important; */
   box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
 }
 
