--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,16 +2,16 @@
   display: flex;
   position: relative;
   flex-direction : column;
-  width: 100%;
-  height: 100vh;
+  width: 100vw;
+  height: 100%;
 }
 
 .wallpaperBody {
   display: flex;
   position: fixed;
   z-index: -1;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-image: url('./images/bgImage.webp');
   background-size: cover;
   background-repeat: no-repeat;
