--- a/src/components/NavBar/NavBarCSS.module.css
+++ b/src/components/NavBar/NavBarCSS.module.css
@@ -9,7 +9,8 @@
   background-size: 100vw; */
   /* z-index: 2000; */
   z-index: 3;
-  width: 100%;
+  /* width: 100vw; */
+  width: 100% !important;
   /* overflow: hidden !important; */
   /* border: 10px solid red; */
   flex-direction: row;
