--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,20 @@
+/* html {
+  displa
+  height: 100%;
+  width: 100vw !important;
+} */
+
+/* html {
+  display: flex;
+} */
+
 body {
+  display: flex;
   /* display: flex;
   position: fixed; */
   margin: 0;
   height: 100%;
-  width: 100%;
+  width: 100vw;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
