--- a/src/components/Card/CardCSS.module.css
+++ b/src/components/Card/CardCSS.module.css
@@ -1,6 +1,7 @@
 .background {
   display: flex;
   flex-direction: column;
+  /* flex-direction: row; */
   align-items: center;
   /* width: 450px; */
   /* width: 90%; */
@@ -12,12 +13,13 @@
   box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
   border: 1px solid rgb(255, 255, 255, 0.18);
   border-radius: 4px;
+  width: 450px;
 }
 
 .editDeleteContainer {
   /* display: none; */
   position: absolute;
-  flex-direction: row;
+  flex-direction: column-reverse;
   right: 5px;
   top: 5px;
 }
@@ -67,15 +69,17 @@
   display: flex;
   /* width: 280px; */
   height: 115px;
+  width: 350px
 }
 
 #title {
-  -webkit-touch-callout: none !important;
+  /* -webkit-touch-callout: none !important;
   -webkit-user-select: none !important;
   -khtml-user-select: none !important;
   -moz-user-select: none !important;
   -ms-user-select: none !important;
-  user-select: none !important;
+  user-select: none !important; */
+
   font-size: 19px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   text-decoration: none;
@@ -84,20 +88,21 @@
   text-overflow: ellipsis;
   color: antiquewhite;
   font-weight: 700 ;
+  background: gray; /* DEV */
   /* width: 417px; */
-  width: 50%;
+  width: 90%;
   height: 25px;
   text-align: center;
   letter-spacing: normal;
 }
 
 #text {
-  -webkit-touch-callout: none !important;
+  /* -webkit-touch-callout: none !important;
   -webkit-user-select: none !important;
   -khtml-user-select: none !important;
   -moz-user-select: none !important;
   -ms-user-select: none !important;
-  user-select: none !important;
+  user-select: none !important; */
   font-size: 16px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   text-decoration: none;
@@ -110,4 +115,26 @@
   height: 25px;
   text-align: center;
   letter-spacing: normal;
+}
+
+/* BREAKPOINTS */
+/* MIN <    MED    > LAR */
+/* 424 < 425 ~ 825 > 826 */
+
+@media screen and (orientation: portrait) and (max-width: 424px) { /* MINPORT */
+  .background {
+    width: 90%;
+  }
+  .image {
+    width: calc(100% - 80px)
+  }
+  .editDeleteContainer {
+    flex-direction: column-reverse;
+  }
+}
+
+@media screen and (orientation: landscape) and (max-height: 424px) { /* MINLAND */
+  .editDeleteContainer {
+    flex-direction: column-reverse;
+  }
 }
