--- a/src/components/CardsMapper/CardsMapperCSS.module.css
+++ b/src/components/CardsMapper/CardsMapperCSS.module.css
@@ -1,8 +1,10 @@
 .background {
   width: 100%; /* ADDED */
+  height: 100%;
   z-index: 0;
   display: flex;
   position: relative;
+  /* position: absolute; */
   justify-content: center;
   flex-wrap: wrap;
   align-self: center;
@@ -10,15 +12,16 @@
   padding-bottom: 9px !important;
 }
 
-.notFound {
+.notFoundOrLoading {
   background: rgba(138, 179, 179, 0.171);
   display: flex;
   /* position: absolute; */
   position: relative;
   flex-direction: column;
   /* min-width: 925px; */
-  width: 100vw;
+  width: 100%;
   height: 260px;
+  /* height: 4060px; */
   align-items: center;
   justify-content: center;
   color: rgba(240, 248, 255, 0.726);
