--- a/src/components/MyRecipe/MyRecipeCSS.module.css
+++ b/src/components/MyRecipe/MyRecipeCSS.module.css
@@ -1,23 +1,23 @@
-.container {
-  /* background: yellow; */ /* DEV */
+.background {
+  background: yellow; /* DEV */
   display: flex;
   position: relative;
   justify-content: center;
-  margin-top: 100px;
-  margin-left: 16px;
-  margin-right: 16px;
   padding-bottom: 16px;
+  /* width: 100%; */
 }
 
 .form { /* ...noSelect; */
   /* background: darkred !important; */
   display: flex;
   position: relative;
+  /* width: 100%; */
+  width: 90%;
   flex-direction: column;
   align-items: center;
   align-self: center;
   /* max-width: 800px; */
-  width: 800px;
+  /* width: 800px; */
   margin-top: 16px;
   /* margin-bottom: 16px; */
   /* min-width: 800px !important; */
@@ -38,6 +38,18 @@
   height: 300px !important;
   align-items: center;
   margin-top: 16px;
+}
+
+.createYourOwnRecipe {
+  background: orange; /* DEV */
+  font-family: Roboto;
+  letter-spacing: 0.15008px;
+  line-height: 24px;
+  margin-top: 7px;
+  /* color: antiquewhite */
+  color: beige;
+  width: 90%;
+  text-align: center;
 }
 
 .title {
@@ -63,8 +75,10 @@
   /* min-width: 760px; */
   /* width: calc(100% - 40px); */
   /* min-width: 760px; */
-  width: calc(100% - 40px);
-  /* width: calc(100% - 100px); */
+  width: calc(100% - 40px) !important;
+  /* width: 100%; */
+
+  
 }
 
 .eachRow:last-child { justify-content: center; }
@@ -86,25 +100,15 @@
 }
 
 .tooltipCenter {
-  z-index: 1;
+  z-index: 1
 }
 
 .tooltipLeft {
-  z-index: 1;
-  /* span: {
-    position: relative;
-    width: 90%;
-  } */
+  z-index: 1
 }
 
 .tooltipRight {
-  z-index: 1;
-  /* span: {
-    position: relative;
-    display: flex;
-    flex-direction: row-reverse;
-    width: 90%;
-  } */
+  z-index: 1
 }
 
 /* eachRow 80vw */
@@ -119,9 +123,7 @@
 }
 
 .textFieldInput {
-  color: transparent;
-  /* ::selection: {
-  } */
+  color: transparent
 }
 
 .summaryContainer {
@@ -183,16 +185,26 @@
   background: rgba(128, 128, 128, 0.2);
   border-radius: 4px;
   width: 100% !important;
+  /* content: "xxx"; */
+  /* color: red !important */
   /* color: rgba(245, 245, 220, 0.85) !important */ /* WHEN SELECTED */
+  /* content: "xxx"; */
 }
 
 .input ::placeholder {
   color: rgba(245, 245, 220, 0.3) !important; /* PLACEHOLDER */
+  /* content: "xxx" !important; */
+  /* content: "xxx" !important; */
+  /* color: red !important */
+  /* content: "xxx"; */
+  /* content: "xxx" !important; */
 }
+
 
 .inputStyle {
   color: rgba(245, 245, 220, 0.85) !important; /* HIDDEN, ONLY LABEL SHOWN */
   caret-color: rgba(0, 0, 0, 0.87) !important;
+  /* content: "xxx" !important; */
 }
 
 .inputShownTitle {
@@ -202,6 +214,8 @@
   padding: 17px 0px 16.5px 0px !important;
   position: absolute !important;
   width: calc(100% - 113px - 28px);
+  /* width: calc(100% - 28px); */
+  /* width: 100%; */
   /* color: rgba(245, 245, 220, 0.85) !important; */ /* WHEN WRITING */
 }
 
@@ -218,8 +232,10 @@
 }
 
 .inputHiddenTitle ::placeholder {
-  color: rgba(245, 245, 220, 0.3) !important /* PLACEHOLDER */
+  color: rgba(245, 245, 220, 0.3) !important; /* PLACEHOLDER */
 }
+
+
 
 .inputImage {
   color: rgba(245, 245, 220, 0.85) !important; /* HIDDEN, ONLY LABEL SHOWN */
@@ -319,9 +335,10 @@
 }
 
 .stepsContainer {
-  /* background: darkcyan; */ /* DEV */
+  background: yellow; /* DEV */
   /* width: calc(100% - 113px); */
-  width: calc(100% - 113px);
+  /* width: calc(100% - 113px); */
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -431,7 +448,38 @@ BUTTON IS DISABLED */
   margin: 0px 5px !important;
 }
 
-@media screen and (max-width: 650px) { /* LESS THAN 650px */
+.innerTooltip {
+  /* background: orange !important; */ /* DEV */
+  display: flex;
+  max-width: 70vw;
+  flex-direction: column;
+  color: #25252d;
+  background: #f5f5f9;
+  font-family: Roboto;
+}
+
+/* [class*="innerTooltip"] {
+  background: orange !important;
+} */
+
+/* BREAKPOINTS */
+/* MIN <    MED    > LAR */
+/* 424 < 425 ~ 825 > 826 */
+
+/* MINPORT */
+@media screen and (orientation: portrait) and (max-width: 424px) {
+  .background { width: 100vw !important}
+  .imageSearcher { width: 90% !important }
+  .text { display: none }
+  .stepTitle  { display: none }
+  .inputShownTitle { width: calc(100% - 28px) }
+  .inputShownInstructions {
+    width: calc(100% - 10px - 40px - 10px - 40px - 28px) !important; /* 100% - 113px - 57px - 10px - 40px - 10px - 40px - 28px */
+  }
+}
+
+/* LESS THAN 650px */
+@media screen and (max-width: 650px) {
   .buttonNew {
     max-width: 40px !important;
     min-width: 40px !important;
@@ -449,11 +497,13 @@ BUTTON IS DISABLED */
     content: '❌';
   }
   .inputShownInstructions {
-    width: calc(100% - 298px); /* 100% - 113px - 57px - 10px - 40px - 10px - 40px - 28px */
+    /* width: calc(100% - 298px); */ /* 100% - 113px - 57px - 10px - 40px - 10px - 40px - 28px */
+    width: calc(100% - 113px - 57px - 10px - 40px - 10px - 40px - 28px)
   }
 }
 
-@media screen and (min-width: 651px) { /* MORE THAN 651px */
+/* MORE THAN 651px */
+@media screen and (min-width: 651px) {
   .buttonNew {
     max-width: 60px !important;
     min-width: 60px !important;
@@ -471,6 +521,7 @@ BUTTON IS DISABLED */
     content: 'DELETE';
   }
   .inputShownInstructions {
-    width: calc(100% - 358px); /* 100% - 113px - 57px - 10px - 60px - 10px - 80px - 28px */
+    /* width: calc(100% - 358px); */ /* 100% - 113px - 57px - 10px - 60px - 10px - 80px - 28px */
+    width: calc(100% - 113px - 57px - 10px - 60px - 10px - 80px - 28px); /* 100% - 113px - 57px - 10px - 40px - 10px - 40px - 28px */
   }
 }
