--- a/src/components/NavBar/NavBarCSS.module.css
+++ b/src/components/NavBar/NavBarCSS.module.css
@@ -1,5 +1,6 @@
 .background {
-  display: flex;
+  /* display: flex; */
+  /* height: 600px !important; */
   /* display: none; */
   /* width: 100vw !important; */
   /* position: relative; */
@@ -8,13 +9,21 @@
   /* background-image: url('../../images/bgImage.webp');
   background-size: 100vw; */
   /* z-index: 2000; */
+
+  /* display: flex; */
+  /* position: sticky; */ /* STICKY NEEDS NO HEIGHT ON PARENT */
+  /* top: 0px; */ /* WHERE STICKY SHOULD STOP */
+
+  
+
+
   z-index: 3;
+  width: 100%;
   /* width: 100vw; */
-  width: 100% !important;
   /* overflow: hidden !important; */
   /* border: 10px solid red; */
   flex-direction: row;
-  height: 100px;
+  /* height: 150px; */
 }
 
 .logoAndMenuContainer {
@@ -24,7 +33,8 @@
   justify-content: space-between;
   align-items: center;
   /* width: 200px !important; */
-  height: 100px;
+  /* height: 100px; */
+  height: 100px !important;
 }
 
 .logoTextContainer {
@@ -47,7 +57,7 @@
   /* display: none !important; */
   flex-direction: column;
   /* min-width: 570px; */
-  min-width: 457px;
+  /* min-width: 457px; */
   /* width: 95vw; */
   /* width: 100%; */
   height: 100px;
@@ -100,12 +110,17 @@
   cursor: pointer;
 }
 
-.button {
-  color: black !important;  
+.linkStyle {
+  text-decoration: none !important;
+}
+
+.button { /* CREATE RECIPE - ABOUT */
+  color: black !important;
   background: #F0F0F0 !important;
   height: 35px;
   font-weight: 400 !important;
-  font-size: 13.33px;
+  /* font-size: 13.33px; */
+  /* font-size: 12px !important; */
   padding-left: 11px;
   padding-right: 11px;
   padding-top: 0px;
@@ -113,13 +128,17 @@
   border: 2px solid rgb(190, 190, 174);
   align-items: center;
   line-height: normal !important;
-  font-family: Roboto
+  font-family: Roboto;
+  min-width: 0px !important;
+  width: 25% !important;
 }
 
 .button:hover { background: #e8e8e8 !important }
 
 .input {
   height: 35px;
+  /* width: 20%; */ /* 23 23 23 23 + 8 */ /* EACH SPACE 2.66 */
+  width: 44.68%; /* 100 - 25 - 25 - 2.66 - 2.66 */
   background: yellow;
   border-radius: 4px !important;
  /*  :fieldset {
@@ -202,7 +221,7 @@
   background: red; /* DEV */
   display: flex;
   flex-direction: row;
-  min-width: 457px;
+  /* min-width: 457px; */
   /* justify-content: space-between; */
   /* align-items: center; */
   height: 50px !important;
@@ -211,6 +230,7 @@
 }
 
 .menuButton {
+  min-width: 0px !important;
   /* display: none; */
   /* display: flex; */
   position: relative !important;
@@ -221,12 +241,15 @@
   /* background: '#F0F0F0', */
   background: #F0F0F0 !important;
   height: 45px;
-  min-width: 55px !important;
+  /* height: 40px; */
   width: 55px !important;
+  /* width: 50px !important; */
   font-family: Arial;
   font-weight: 400;
   font-size: 13.33px;
   margin-right: 16px !important;
+  /* align-self: unset; */
+  /* top: 10px; */
 }
 
 .menuButton:hover { background: #e8e8e8 !important }
@@ -235,12 +258,13 @@
   .background {
     flex-direction: column;
   }
-  .selectsAndButtons { 
+  .selectsAndButtons {
     display: none;
     /* width: 100% !important; */
     /* width: 100%; */
     /* margin-right: unset; */
     width: calc(100% - 16px)
+    /* width: 100% */
   }
   .menuButton { display: flex }
   .logoAndMenuContainer { width: 100% !important }
@@ -262,4 +286,34 @@
   }
   .menuButton { display: none !important}
   .upperLower { width: 60% }
+}
+
+/* BREAKPOINTS */
+/* MIN <    MED    > LAR */
+/* 424 < 425 ~ 825 > 826 */
+
+/* MINPORT */
+@media screen and (orientation: portrait) and (max-width: 424px) {
+  /* .menuButton {
+    align-self: flex-start;
+  } */
+  .selectsAndButtons { 
+    height: 150px;
+    width: calc(100% - 16px);
+    margin-left: 8px;
+    /* padding: 0px 8px 0px 8px; */
+    justify-content: flex-end;
+   }
+  /* .menuButton {
+    margin-bottom: 50px !important;
+  } */
+  .logoTextContainer {
+    margin-left: 8px !important;
+  }
+  .background {
+    /* height: 150px !important */
+  }
+  .logoAndMenuContainer {
+    /* background: lightgreen; */
+  }
 }
