--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,7 @@
-/* html {
-  displa
+html {
   height: 100%;
-  width: 100vw !important;
-} */
-
-/* html {
-  display: flex;
-} */
+  width: 100%;
+}
 
 body {
   display: flex;
@@ -14,9 +9,14 @@ body {
   position: fixed; */
   margin: 0;
   height: 100%;
-  width: 100vw;
+  width: 100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   overflow-x: hidden;
+}
+
+#root {
+  height: 100%;
+  width: 100%;
 }
