--- a/src/components/MyRecipe/MyRecipeCSS.module.css
+++ b/src/components/MyRecipe/MyRecipeCSS.module.css
@@ -1,5 +1,5 @@
 .background {
-  background: yellow; /* DEV */
+  background: orange; /* DEV */
   display: flex;
   position: relative;
   justify-content: center;
@@ -8,7 +8,7 @@
 }
 
 .form { /* ...noSelect; */
-  /* background: darkred !important; */
+  background: darkmagenta !important; /* DEV */
   display: flex;
   position: relative;
   /* width: 100%; */
@@ -17,16 +17,18 @@
   align-items: center;
   align-self: center;
   /* max-width: 800px; */
+  max-width: 800px;
   /* width: 800px; */
   margin-top: 16px;
   /* margin-bottom: 16px; */
   /* min-width: 800px !important; */
   padding-bottom: 6px;
-  background: linear-gradient(135deg, rgba(196, 34, 147, 0.1), rgba(196, 34, 147, 0));
+
+  /* background: linear-gradient(135deg, rgba(196, 34, 147, 0.1), rgba(196, 34, 147, 0));
   backdrop-filter: blur(20px);
   box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
   border: 1px solid rgb(255, 255, 255, 0.18);
-  border-radius: 4px;
+  border-radius: 4px; */
 }
 
 .imageSearcher {
@@ -99,9 +101,9 @@
   align-items: center;
 }
 
-.tooltipCenter {
+/* .tooltipCenter {
   z-index: 1
-}
+} */
 
 .tooltipLeft {
   z-index: 1
@@ -456,6 +458,7 @@ BUTTON IS DISABLED */
   color: #25252d;
   background: #f5f5f9;
   font-family: Roboto;
+  /* z-index: -1 !important; */
 }
 
 /* [class*="innerTooltip"] {
