--- a/src/components/ServerStatus/ServerStatusCSS.module.css
+++ b/src/components/ServerStatus/ServerStatusCSS.module.css
@@ -1,10 +1,12 @@
 .background {
-  background: red !important; /* DEV */
+  /* background: red !important; */ /* DEV */
   display: flex;
+  /* position: fixed; */
   position: fixed;
   right: -280px; /* SLIDER BOX WIDTH */
   /* top: 227px; */
   top: 270px;
+  
   z-index: 3000;
 }
 
@@ -18,7 +20,7 @@
   min-height: 120px !important;
   height: 120px !important;
   color: darkblue;
-  font-size: 14px;
+  /* font-size: 14px; */
   border-radius: 0px;
   background: lightblue;
   /* :hover {
@@ -44,6 +46,7 @@
   width: 273px;
   align-items: center;
   margin-left: 7px;
+  font-size: 14px;
 }
 
 .eachRowSmall {
@@ -52,6 +55,7 @@
   width: 260px; /* 280 total */
   align-items: center;
   margin-left: 20px;
+  font-size: 14px;
 }
 
 .circleBig {
@@ -77,11 +81,13 @@
 }
 
 .title {
+  background: gray; /* DEV */
 /*   display: block;
   block-size: 24px; */
   font-family: Roboto;
   letter-spacing: 0.15008px;
-  line-height: 24px
+  line-height: 24px;
+  margin-right: 30px;
 }
 
 .sliderBox {
@@ -92,14 +98,27 @@
   background: cadetblue;
   width: 280px; /* SLIDER BOX WIDTH */
   right: -200px;
+  max-height: 280px;
 }
 
 /* BREAKPOINTS */
 /* MIN <    MED    > LAR */
 /* 424 < 425 ~ 825 > 826 */
 
-@media screen and (orientation: portrait) and (max-width: 424px) { /* LESS THAN 425px */
+/* SMAPORT */
+@media screen
+and (orientation: portrait)
+and (max-width: 424px) {
   .background {
     top: 300px !important;
+  }
+}
+
+/* SMALAND */
+@media screen
+and (orientation: landscape)
+and (max-height: 424px) {
+  .background {
+    top: 00px !important;
   }
 }
